--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ngrx/component-store": "^11.0.1",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/entity": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
