--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@ngneat/content-loader": "^6.0.0",
     "@ngrx/component-store": "^11.0.1",
     "@ngrx/effects": "^11.0.1",
     "@ngrx/entity": "^11.0.1",
