--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
     "angular-svg-icon": "^11.2.0",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
