--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/router-store": "^11.0.1",
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
+    "angular-animations": "^0.11.0",
     "angular-svg-icon": "^11.2.0",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
